# autodrone

./: .gitattributes  .gitignore  Dockerfile  README.md  build_image.sh  crash_reports.md  requirements.txt  run_mission.sh  tmux_open.sh
src/catkin_ws/src/perception/: CMakeLists.txt  package.xml
src/catkin_ws/src/perception/config/: dnncv_config.yaml  ekf_config.yaml  perception_config.yaml  tcv_config.yaml
src/catkin_ws/src/perception/data/: helipad_dists_metric.txt  helipad_dists_origin_center_enu_metric.txt  helipad_dists_origin_center_metric.txt
src/catkin_ws/src/perception/data_storage/: info.md
src/catkin_ws/src/perception/launch/: dnnCV_real.launch  dnnCV_sim.launch  ekf_real.launch  ekf_sim.launch  real.launch  sensing_no_dnn.launch  sensing_no_gps.launch  sensing_no_gps_no_dnn.launch  sim_all_sensing.launch  tcv_real.launch  tcv_sim.launch
src/catkin_ws/src/perception/launch/old/: combined_perception_system.launch
src/catkin_ws/src/perception/msg/: DnnCvPoseEstimate.msg  EulerPose.msg  Heading.msg  PointWithCovarianceStamped.msg
src/catkin_ws/src/perception/scripts/: dnnCV.py  run_ekf.py
src/catkin_ws/src/perception/scripts/dnn_cv/: bb_pose_estimate.py  dnncv.py
src/catkin_ws/src/perception/scripts/ekf/: dynamic_models.py  ekf.py  measurement_models.py  run_ekf.py
src/catkin_ws/src/perception/scripts/original_files/: dnnCV.py  kalman_filter_sim.py  mock_gps.py
src/catkin_ws/src/perception/scripts/tcv/: corner_detector.py  corner_detector_optimizer.py  experimental_tcv.py  feature_detector.py  find_H.py  homography.py  label_circles.py  label_corners.py  label_gt_corners.py  pose_recovery.py  save_image.py  tcv.py  test_corner_dists.txt
src/catkin_ws/src/perception/worlds/plugin/: README.md  animated_ship.cc
src/catkin_ws/src/pose_estimate/: CMakeLists.txt  package.xml
src/catkin_ws/src/pose_estimate/config/: config.yaml  perception_config.yaml
src/catkin_ws/src/pose_estimate/launch/: data_saver.launch  dnnCV_real.launch  dnnCV_sim.launch  real.launch  sensing_no_dnn.launch  sensing_no_gps.launch  sensing_no_gps_no_dnn.launch  sim_all_sensing.launch
src/catkin_ws/src/pose_estimate/launch/old/: tcv_perception_system.launch  yolo_perception_system.launch
src/catkin_ws/src/pose_estimate/msg/: EkfOutput.msg
src/catkin_ws/src/pose_estimate/scripts/: config.py  data_saver.py  dnnCV.py  ekf.py  kalman_filter.py  pe_help_functions.py  run_ekf.py  tcv.py
src/catkin_ws/src/pose_estimate/scripts/ekf/: ekf.py
src/catkin_ws/src/pose_estimate/scripts/old_files/: collect_dataset.py  collect_dataset_low_flight.py  collect_regression.py  dead_reckoning.py  mission.py  old_cv_module_ros.py  planner.py  plot_data_old.py  tcv_filter.py
src/catkin_ws/src/pose_estimate/worlds/: ocean.world
(+190 files in other folders)
